# sabatdaq

./: .clang-format  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  config.h.in
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: lib.cpp  lib.hpp  main.cpp
test/: CMakeLists.txt
test/source/: sabatdaq_test.cpp
